# app/Http/Controllers/API/BagController.php
@@ -6,20 +6,20 @@ use App\Http\Controllers\Controller;
 use Illuminate\Support\Facades\Validator;
 use Illuminate\Http\Request;
 use Symfony\Component\HttpKernel\Exception\HttpException;
-use App\Models\Book;
+use App\Models\Bag;
 use OpenApi\Annotations as OA;
 
 /**
- * Class BookController.
+ * Class BagController.
  * 
  * @author Yonathan <yonathan.422023017@civitas.ukrida.ac.id>
  */
-class BookController extends Controller
+class BagController extends Controller
 {
     /** 
      * @OA\Get(
-     *     path="/api/book",
-     *     tags={"book"},
+     *     path="/api/bag",
+     *     tags={"bag"},
      *     summary="Display a listing of the items",
      *     operationId="index",
      *     @OA\Response(
@@ -74,7 +74,7 @@ class BookController extends Controller
      *      required=false,
      *      @OA\Schema(
      *          type="integer",
-     *          example="latest"
+     *          example="6"
      *      )
      *  ),
      * )
@@ -86,10 +86,10 @@ class BookController extends Controller
             $page                 = $data['filter']['_page']  = (@$data['filter']['_page'] ? intval($data['filter']['_page']) : 1);
             $limit                = $data['filter']['_limit'] = (@$data['filter']['_limit'] ? intval($data['filter']['_limit']) : 1000);
             $offset               = ($page?($page-1)*$limit:0);
-            $data['products']     = Book::whereRaw('1 = 1');
+            $data['products']     = Bag::whereRaw('1 = 1');
             
             if($request->get('_search')){
-                $data['products'] = $data['products']->whereRaw('(LOWER(title) LIKE "%'.strtolower($request->get('_search')).'%")');
+                $data['products'] = $data['products']->whereRaw('(LOWER(name) LIKE "%'.strtolower($request->get('_search')).'%")');
             }
             if($request->get('_type')){
                 $data['products'] = $data['products']->whereRaw('LOWER(type) = "'.strtolower($request->get('_type')).'"');
@@ -129,12 +129,10 @@ class BookController extends Controller
             throw new HttpException(400, "Invalid data : {$exception->getMessage()}");
         }
     }
-
-
     /**
      * @OA\Post(
-     *      path="/api/book",
-     *      tags={"book"},
+     *      path="/api/bag",
+     *      tags={"bag"},
      *      summary="Store a newly created item",
      *      operationId="store",
      *      @OA\Response(
@@ -151,11 +149,11 @@ class BookController extends Controller
      *           required=true,
      *           description="Request body description",
      *           @OA\JsonContent(
-     *               ref="#/components/schemas/Book",
-     *               example={"title": "Eating Clean", "author": "Inge Tumiwa-Bachrens", "publisher": "Kawan Pustaka", "publication_year": "2016",
-     *                        "cover": "https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1482170055i/33511107.jpg",
-     *                        "description": "Menjadi sehat adalah impian semua orang. Makanan yang selama ini kita pikir sehat ternyata belum tentu 'sehat' bagi tubuh kita.",
-     *                        "price": 85000}
+     *               ref="#/components/schemas/Bag",
+     *               example={"name": "LA MEDUSA CANVAS LARGE TOTE BAG", "designer": "Gianni Versace", "publisher": "Versace", "publication_year": "2024",
+     *                        "cover": "https://cdn-images.italist.com/image/upload/t_medium_dpr_2_q_auto_v_2,f_auto/ebcc1c021e598dcb630515710d2d2134.jpg",
+     *                        "description": "Terinspirasi oleh mitologi Yunani, LA MEDUSA CANVAS LARGE TOTE BAG telah menjadi penanda utama rumah Versace. Dinamakan berdasarkan motif ikoniknya, tas jinjing berbahan kanvas La Medusa semakin dipertegas dengan logo timbul dan pegangan bagian atas berbahan kulit.",
+     *                        "price": 26490000}
      *            ),
      *          ),
      *          security={{"passport_token_ready":{},"passport":{}}}
@@ -165,15 +163,15 @@ class BookController extends Controller
     {
         try {
             $validator = Validator::make($request->all(), [
-                'title' => 'required|unique:books',
+                'title' => 'required|unique:bags',
                 'author' => 'required|max:100',
             ]);
             if ($validator->fails()) {
                 throw new HttpException(400, $validator->message()->first());
             }
-            $book = new Book;
-            $book->fill($request->all())->save();
-            return $book;
+            $bag = new Bag;
+            $bag->fill($request->all())->save();
+            return $bag;
 
         } catch(\Exception $exception) {
             throw new HttpException(400, "Invalid data : {$exception->getMessage()}");
@@ -182,8 +180,8 @@ class BookController extends Controller
 
     /**
      * @OA\Get(
-     *     path="/api/books/{id}",
-     *     tags={"book"},
+     *     path="/api/bag/{id}",
+     *     tags={"bag"},
      *     summary="Display the specified item",
      *     operationId="show",
      *     @OA\Response(
@@ -215,17 +213,17 @@ class BookController extends Controller
      */
     public function show($id)
     {
-        $book = Book::find($id);
-        if(!$book){
+        $bag = Bag::find($id);
+        if(!$bag){
             throw new HttpException(404, 'Item not found');
         }
-        return $book;
+        return $bag;
     }
 
     /**
      * @OA\Put(
-     *     path="/api/books/{id}",
-     *     tags={"book"},
+     *     path="/api/bag/{id}",
+     *     tags={"bag"},
      *     summary="Update the specified item",
      *     operationId="update",
      *     @OA\Response(
@@ -257,11 +255,11 @@ class BookController extends Controller
      *           required=true,
      *           description="Request body description",
      *           @OA\JsonContent(
-     *               ref="#/components/schemas/Book",
-     *               example={"title": "Eating Clean", "author": "Inge Tumiwa-Bachrens", "publisher": "Kawan Pustaka", "publication_year": "2016",
-     *                        "cover": "https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1482170055i/33511107.jpg",
-     *                        "description": "Menjadi sehat adalah impian semua orang. Makanan yang selama ini kita pikir sehat ternyata belum tentu 'sehat' bagi tubuh kita.",
-     *                        "price": 85000}
+     *               ref="#/components/schemas/Bag",
+     *               example={"name": "LA MEDUSA CANVAS LARGE TOTE BAG", "designer": "Gianni Versace", "publisher": "Versace", "publication_year": "2024",
+     *                        "cover": "https://cdn-images.italist.com/image/upload/t_medium_dpr_2_q_auto_v_2,f_auto/ebcc1c021e598dcb630515710d2d2134.jpg",
+     *                        "description": "Terinspirasi oleh mitologi Yunani, LA MEDUSA CANVAS LARGE TOTE BAG telah menjadi penanda utama rumah Versace. Dinamakan berdasarkan motif ikoniknya, tas jinjing berbahan kanvas La Medusa semakin dipertegas dengan logo timbul dan pegangan bagian atas berbahan kulit.",
+     *                        "price": 26490000}
      *           ),
      *        ),
      *        security={{"passport_token_ready":{},"passport":{}}}
@@ -269,20 +267,20 @@ class BookController extends Controller
      */
     public function update(Request $request, $id)
     {
-        $book = Book::find($id);
-        if(!$book){
+        $bag = Bag::find($id);
+        if(!$bag){
             throw new HttpException(404, 'Item not found');
         }
 
         try {
             $validator = Validator::make($request->all(), [
-                'title'  => 'required|unique:books',
+                'title'  => 'required|unique:bags',
                 'author'  => 'required|max:100',
             ]);
             if ($validator->fails()) {
                 throw new HttpException(400, $validator->messages()->first());
             }
-            $book->fill($request->all())->save();
+            $bag->fill($request->all())->save();
             return response()->json(array('message'=>'Updated successfully'), 200);
 
         } catch(\Exception $exception) {
@@ -292,8 +290,8 @@ class BookController extends Controller
 
     /**
      * @OA\Delete(
-     *     path="/api/books/{id}",
-     *     tags={"book"},
+     *     path="/api/bag/{id}",
+     *     tags={"bag"},
      *     summary="Remove the specified item",
      *     operationId="destroy",
      *     @OA\Response(
@@ -321,18 +319,18 @@ class BookController extends Controller
      *             format="int64"
      *          )
      *      ),
-     *      security={{"passport_token_ready":{},"passport":{}}}
+     *      security={{"passport_token_ready":{}, "passport":{}}}
      * )
      */
     public function destroy($id)
     {
-        $book = Book::find($id);
-        if(!$book){
+        $bag = Bag::find($id);
+        if(!$bag){
             throw new HttpException(404, 'Item not found');
         }
 
         try {
-            $book->delete();
+            $bag->delete();
             return response()->json(array('message'=>'Deleted successfully'), 200);
 
         } catch(\Exception $exception) {
@@ -340,4 +338,3 @@ class BookController extends Controller
         }
     }
 }
-
